Fix TopHeader overlap of Options button

--- a/Src/DesktopClient/GradeMaster.DesktopClient/wwwroot/css/components.css
+++ b/Src/DesktopClient/GradeMaster.DesktopClient/wwwroot/css/components.css
@@ -9,5 +9,6 @@
         top: 6px;
         position: sticky;
         z-index: 10;
+        max-width: 250px;
     }
 }
